fix: Event.attributeOptionCombo is a MetadataIdentifier (#10663)